# bsl-context

./: .gitignore  CHANGELOG.md  CHANGES_FORK.md  Cargo.toml  LICENSE  README.md  README_RU.md  run.bat
.agents/skills/bsl-validator/: SKILL.md
.github/workflows/: release.yml
configs/: config.toml.example
crates/bsl-validator/: Cargo.toml
crates/bsl-validator/src/: check.rs  expression.rs  lib.rs  scope.rs
crates/bsl-validator/tests/: real_expression.rs  real_level2.rs
crates/hbk-parser/: Cargo.toml
crates/hbk-parser/src/: blocks.rs  constructor_page.rs  enum_page.rs  enum_value.rs  html.rs  lib.rs  method_page.rs  models.rs  object_page.rs  property_page.rs
crates/hbk-parser/tests/: real_enum.rs  real_pages.rs
crates/hbk-reader/: Cargo.toml
crates/hbk-reader/src/: container.rs  content.rs  error.rs  lib.rs  models.rs  toc.rs
crates/hbk-reader/tests/: real_hbk.rs
crates/platform-index/: Cargo.toml
crates/platform-index/src/: entities.rs  format.rs  lib.rs  loader.rs  mapper.rs  search.rs  storage.rs  visitor.rs
crates/platform-index/tests/: real_index.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  http.rs  index.html  lib.rs  main.rs  mcp_server.rs  pid_lock.rs
crates/server/tests/: real_mcp.rs
scripts/: analyze_argcount.py  bsl_stat_run.py  diag_034.py  sample_nstr.py  sample_residual.py
