[workspace]
resolver = "2"
members = [
    "crates/hbk-reader",
    "crates/hbk-parser",
    "crates/platform-index",
    "crates/bsl-validator",
    "crates/server",
]

[workspace.package]
version = "0.4.3"
edition = "2021"
license = "MIT"
description = "MCP-сервер контекста платформы 1С (типы, методы, перечисления + валидация BSL-выражений)"
authors = ["regsorm-lab"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP-протокол
rmcp = { version = "1.3", features = ["server", "transport-streamable-http-server", "macros"] }

# HTTP-сервер
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Конфиг
toml = "0.8"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Ошибки
anyhow = "1"
thiserror = "2"

# HBK-парсинг (Phase 1+)
byteorder = "1"
flate2 = "1"
zip = "2"
encoding_rs = "0.8"

# HTML-парсинг (Phase 2)
scraper = "0.21"
ego-tree = "0.9"

# Регулярные выражения / glob
regex = "1"

# BSL-парсер (Phase 6)
tree-sitter = "0.25"

# Утилиты
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"

# Тесты
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
