[package]
name = "bsl-context-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP-сервер контекста платформы 1С — HTTP-точка входа"

[[bin]]
name = "bsl-context-rs"
path = "src/main.rs"

[dependencies]
platform-index = { path = "../platform-index" }
bsl-validator  = { path = "../bsl-validator" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rmcp = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
sysinfo = "0.32"
